test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sizeof_function.plx
pub fn x(none) i32 {
    return 0
}

#  can't apply sizeof to a function
pub fn main(none) i32 {
    return sizeof(x)
}
